tests/baselines/reference/emptyTuplesTypeAssertion01.errors.txt
tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts(2,11): error TS2339: Property '0' does not exist on type '[]'.


==== tests/cases/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts (1 errors) ====
    let x = <[]>[];
    let y = x[0];
              ~
!!! error TS2339: Property '0' does not exist on type '[]'.